<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/settings_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="0dp"
        android:theme="@style/Widget.AppCompat.Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_back_arrow"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/image_frame"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/tv_center_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/settings"
                android:textSize="26sp"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/text_size"
        android:textStyle="normal"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        android:layout_marginStart="15dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:text="@string/normal_large"
        android:textStyle="normal"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"
        android:switchMinWidth="60dp"/>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/dark_mode_on_off"
        android:textStyle="normal"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        android:layout_marginStart="15dp" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:text="@string/off_on"
        android:textStyle="normal"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"
        android:switchMinWidth="60dp"/>

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/textView3" />



    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/column_view"
        android:textStyle="normal"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line3"
        android:layout_marginStart="15dp" />

    <RadioGroup
        android:id="@+id/colum_view_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/line3"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/multi_column_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:drawableStart="@drawable/multi_column"
            android:padding="4dp"
            android:checked="true"
            android:layout_marginEnd="16dp"/>

        <RadioButton
            android:id="@+id/single_column_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:drawableEnd="@drawable/single_column"
            android:padding="4dp"
            android:layout_marginEnd="16dp"/>

    </RadioGroup>

    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/textView4" />




    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/max_line"
        android:textStyle="normal"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line4"
        android:layout_marginStart="15dp" />

    <RadioGroup
        android:id="@+id/max_line_count_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/line4"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/max_line_five"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingStart="4dp"
            android:text="@string/_5"
            android:textSize="22sp"
            android:layout_marginEnd="16dp"/>

        <RadioButton
            android:id="@+id/max_line_ten"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:checked="true"
            android:paddingStart="4dp"
            android:textSize="22sp"
            android:text="@string/_10"
            android:layout_marginEnd="16dp"/>

        <RadioButton
            android:id="@+id/max_line_fifteen"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingStart="4dp"
            android:textSize="22sp"
            android:text="@string/_15"
            android:layout_marginEnd="16dp"/>

    </RadioGroup>

    <View
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/textView5" />



</androidx.constraintlayout.widget.ConstraintLayout>